# dinn_gui_hesea

./: CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  nn_hesea.cpp  nn_hesea.h  nn_hesea_server.cpp  nn_hesea_server.h
